--- a/scenarii/test.yml
+++ b/scenarii/test.yml
@@ -1,3 +1,33 @@
 scenarii:
-  toto:
-    kernel: "DGEMM"
+  kernels:
+    tchoup:
+      type: "DGEMM"
+    blah:
+      type: "DGEMM"
+  execution:
+    execution_params:
+      blocksize: [256, 512]
+        # first, last, step
+        # TODO: implement this
+        #for: [256, 512, 256]
+      # We may want to express [(1,2), (2,1)] and use 'init_core[0]'/'init_core[1]'
+      init_core: [1, 2]
+    scenario:
+      tchoup:
+        init:
+          params: ["blocksize"]
+          core: "init_core"
+      blah:
+        init:
+          params: ["tchoup"]
+          core: "init_core"
+      tchoup:
+        exec:
+          core: 2
+          repeat: 2
+          sync: true
+      blah:
+        exec:
+          core: 1
+          repeat: 2
+          sync: true
