--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,8 +10,8 @@ find_package(Hwloc 1.11 REQUIRED)
 
 include_directories(${PROJECT_SOURCE_DIR}/include ${YAML_CPP_INCLUDE_DIR})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fno-rtti")
 
-add_executable(tool test.cpp runtime.cpp kblas.cpp)
+add_executable(tool test.cpp runtime.cpp kblas.cpp kernel.cpp)
 
 target_link_libraries(tool numa ${CMAKE_THREAD_LIBS_INIT} ${Hwloc_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} ${YAML_CPP_LIBRARIES})
