--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 
 find_package(Threads REQUIRED)
-#FIXME move kernels somewhere else
+#FIXME move kernels specific stuff somewhere else
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
 find_package(yaml-cpp REQUIRED)
@@ -12,8 +12,6 @@ include_directories(${PROJECT_SOURCE_DIR}/include ${YAML_CPP_INCLUDE_DIR})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fno-rtti")
 
-add_executable(test_tool test.cpp runtime.cpp kblas.cpp kernel.cpp)
-add_executable(tool main.cpp runtime.cpp kblas.cpp kernel.cpp)
+add_executable(tool main.cpp runtime.cpp kernel.cpp KernelsBlas.cpp KernelsCheck.cpp)
 
 target_link_libraries(tool numa ${CMAKE_THREAD_LIBS_INIT} ${Hwloc_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} ${YAML_CPP_LIBRARIES})
-target_link_libraries(test_tool numa ${CMAKE_THREAD_LIBS_INIT} ${Hwloc_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} ${YAML_CPP_LIBRARIES})
