--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -10,5 +10,5 @@ ExternalProject_Add(yaml-cpp
   UPDATE_COMMAND ""
   PATCH_COMMAND ""
   INSTALL_DIR "${CMAKE_CURRENT_BINARY_DIR}"
-  CMAKE_ARGS -DYAML_CPP_BUILD_TOOLS:BOOL=OFF -DYAML_CPP_BUILD_CONTRIB:BOOL=OFF -DBUILD_SHARED_LIBS:BOOL=OFF -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
+  CMAKE_ARGS -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DYAML_CPP_BUILD_TOOLS:BOOL=OFF -DYAML_CPP_BUILD_CONTRIB:BOOL=OFF -DBUILD_SHARED_LIBS:BOOL=OFF -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
 )
