--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 option(USE_MKL " should be using MKL instead of OpenBLAS" OFF)
+option(USE_ATLAS " should be using ATLAS instead of OpenBLAS" OFF)
 
 find_package(Threads REQUIRED)
 #FIXME move kernels specific stuff somewhere else
@@ -14,6 +15,9 @@ if(USE_MKL)
   # find_package(MKL REQUIRED)
   set_target_properties(tool PROPERTIES LINK_FLAGS "-L${MKLROOT}/lib/intel64 -Wl,--no-as-needed -lmkl_intel_ilp64 -lmkl_sequential -lmkl_core -lpthread -lm -ldl")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMKL_ILP64 -m64 -I${MKLROOT}/include")
+elseif(USE_ATLAS)
+    set_target_properties(tool PROPERTIES LINK_FLAGS "-L/home/pviroule/install-atlas/lib -lcblas -latlas -llapack")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/home/pviroule/install-atlas/include")
 else()
   find_package(BLAS REQUIRED)
   find_package(LAPACK REQUIRED)
